# CPP

./: README.md
SIFT_ImageAlignment_for_Matching/: CMakeLists.txt  real_time.cpp
SIFT_ImageAlignment_for_Matching/src/: ImageAlignmentContainer.h  ImageAlignmentProject.h
coin-nut-screw-hex_key-recognition/: cimageproc.cpp
opencv/SIFT_ImageAlignment_for_Matching/src/: ImageAlignment.cpp  ImageAlignment.h  ImageAlignmentContainer.cpp  ImageAlignmentProject.cpp  ImageAlignmentPyramid.cpp  ImageAlignmentPyramid.h
opencv/simple_recognition/: ccontour.h  cimageproc.h  mydebug.h  mydefine.h
others/sort/: internalsort.h
retro_snack/: snack.cpp  snack.h
simple_recognition/: ccontour.cpp  mydebug.cpp
贪食蛇/: 贪食蛇.sln
贪食蛇/Debug/: 贪食蛇.ilk
贪食蛇/贪食蛇/: main.cpp  贪食蛇.vcxproj  贪食蛇.vcxproj.filters
贪食蛇/贪食蛇/Debug/: vc140.idb
贪食蛇/贪食蛇/Debug/贪食蛇.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  贪食蛇.lastbuildstate
